--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
+    "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.21.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.1"
