--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-hook-form": "^7.49.2",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.21.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.1",
