--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^4.7.0",
     "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
@@ -30,6 +29,7 @@
     "react-router-dom": "^6.21.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.1",
+    "uuid": "^9.0.1",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
